--- a/resources/fxml/transport.fxml
+++ b/resources/fxml/transport.fxml
@@ -4,20 +4,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<TabPane maxHeight="-Infinity" fx:controller="ba.unsa.etf.rs.tutorijal8.TransportController" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rs.tutorijal8.Controller">
     <tabs>
         <Tab text="Driver">
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView fx:id="driverTable" layoutX="14.0" layoutY="14.0" prefHeight="149.0" prefWidth="571.0">
-                            <columns>
-                                <TableColumn fx:id="columnName" prefWidth="120.0" text="Name" />
-                                <TableColumn fx:id="columnSurname" minWidth="0.0" prefWidth="133.0" text="Surname" />
-                                <TableColumn fx:id="columnPersonalIDNumber" minWidth="0.0" prefWidth="151.0" text="Personal ID number" />
-                                <TableColumn fx:id="columnEmploymentDate" minWidth="0.0" prefWidth="166.0" text="Employment date" />
-                            </columns>
-                        </TableView>
+                        <ListView fx:id="listDriver" layoutX="14.0" layoutY="14.0" prefHeight="149.0" prefWidth="571.0"/>
                         <GridPane layoutX="14.0" layoutY="172.0" prefHeight="92.0" prefWidth="253.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.0" minWidth="10.0" prefWidth="123.0" />
@@ -74,7 +67,7 @@
                            </padding></Button>
                                 <Button mnemonicParsing="false" text="Delete driver" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <opaqueInsets>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                              <Insets />
                            </opaqueInsets></Button>
                                 <Button mnemonicParsing="false" text="Exit" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                             </children>
@@ -82,6 +75,23 @@
                     </children></AnchorPane>
             </content>
         </Tab>
+        <Tab text="Bus">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                    <children>
+                        <Label layoutX="22.0" layoutY="44.0" text="Maker:" />
+                        <Label layoutX="22.0" layoutY="79.0" text="Series:" />
+                        <Label layoutX="22.0" layoutY="114.0" text="Seat number:" />
+                        <ListView fx:id="busTable" layoutX="283.0" layoutY="23.0" prefHeight="200.0" prefWidth="300.0"/>
 
+                        <TextField fx:id="MakerBus" layoutX="107.0" layoutY="40.0" />
+                        <TextField fx:id="SeriesBus" layoutX="107.0" layoutY="75.0" />
+                        <TextField fx:id="SeatNumberBus" layoutX="107.0" layoutY="110.0" />
+                        <Button layoutX="22.0" layoutY="186.0" mnemonicParsing="false" text="Add bus" />
+                        <Button layoutX="93.0" layoutY="186.0" mnemonicParsing="false" text="Delete bus" />
+                        <Button fx:id="exitbusButton" layoutX="182.0" layoutY="186.0" mnemonicParsing="false" text="Exit" />
+                    </children></AnchorPane>
+            </content>
+        </Tab>
     </tabs>
 </TabPane>
