--- a/resources/fxml/transport.fxml
+++ b/resources/fxml/transport.fxml
@@ -82,7 +82,7 @@
                         <Label layoutX="22.0" layoutY="44.0" text="Maker:" />
                         <Label layoutX="22.0" layoutY="79.0" text="Series:" />
                         <Label layoutX="22.0" layoutY="114.0" text="Seat number:" />
-                        <ListView fx:id="busTable" layoutX="283.0" layoutY="23.0" prefHeight="200.0" prefWidth="300.0"/>
+                        <ListView fx:id="listBus" layoutX="283.0" layoutY="23.0" prefHeight="200.0" prefWidth="300.0"/>
 
                         <TextField fx:id="MakerBus" layoutX="107.0" layoutY="40.0" />
                         <TextField fx:id="SeriesBus" layoutX="107.0" layoutY="75.0" />
