--- a/resources/fxml/transport.fxml
+++ b/resources/fxml/transport.fxml
@@ -89,7 +89,7 @@
                         <TextField fx:id="SeatNumberBus" layoutX="107.0" layoutY="110.0" />
                         <Button layoutX="22.0" layoutY="186.0" mnemonicParsing="false" text="Add bus" />
                         <Button layoutX="93.0" layoutY="186.0" mnemonicParsing="false" text="Delete bus" />
-                        <Button fx:id="exitbusButton" layoutX="182.0" layoutY="186.0" mnemonicParsing="false" text="Exit" />
+                        <Button fx:id="exitBus" onAction="#exit" layoutX="182.0" layoutY="186.0" mnemonicParsing="false" text="Exit" />
                     </children></AnchorPane>
             </content>
         </Tab>
