--- a/resources/fxml/transport.fxml
+++ b/resources/fxml/transport.fxml
@@ -58,7 +58,7 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Button contentDisplay="CENTER" graphicTextGap="10.0" mnemonicParsing="false" text="Add driver" GridPane.columnIndex="1">
+                                <Button contentDisplay="CENTER" graphicTextGap="10.0" mnemonicParsing="false"  onAction="#addDriver" text="Add driver" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
@@ -87,8 +87,8 @@
                         <TextField fx:id="MakerBus" layoutX="107.0" layoutY="40.0" />
                         <TextField fx:id="SeriesBus" layoutX="107.0" layoutY="75.0" />
                         <TextField fx:id="SeatNumberBus" layoutX="107.0" layoutY="110.0" />
-                        <Button layoutX="22.0" layoutY="186.0" mnemonicParsing="false" text="Add bus" />
-                        <Button layoutX="93.0" layoutY="186.0" mnemonicParsing="false" text="Delete bus" />
+                        <Button layoutX="22.0" layoutY="186.0" mnemonicParsing="false" text="Add bus" onAction="#addBus" />
+                        <Button layoutX="93.0" layoutY="186.0" mnemonicParsing="false" text="Delete bus" onAction="#deleteBus" />
                         <Button fx:id="exitBus" onAction="#exit" layoutX="182.0" layoutY="186.0" mnemonicParsing="false" text="Exit" />
                     </children></AnchorPane>
             </content>
