--- a/resources/fxml/transport.fxml
+++ b/resources/fxml/transport.fxml
@@ -11,7 +11,7 @@
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="329.0" prefWidth="542.0">
                     <children>
                         <ListView fx:id="listDriver" layoutX="14.0" layoutY="14.0" prefHeight="150.0" prefWidth="468.0" />
-                        <GridPane layoutX="14.0" layoutY="172.0" prefHeight="92.0" prefWidth="253.0">
+                        <GridPane layoutX="14.0" layoutY="172.0" prefHeight="144.0" prefWidth="254.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.0" minWidth="10.0" prefWidth="123.0" />
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.0" minWidth="10.0" prefWidth="85.0" />
@@ -20,6 +20,7 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
                                 <Label text="Surname:" GridPane.rowIndex="1" />
@@ -28,19 +29,8 @@
                                 <TextField fx:id="nameDriver" prefHeight="25.0" prefWidth="137.0" GridPane.columnIndex="1" />
                                 <TextField fx:id="surnameDriver" prefHeight="25.0" prefWidth="135.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                 <TextField fx:id="JMBGDriver" prefHeight="25.0" prefWidth="136.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" text="Potvrdi izmjene" onAction="#btnUpdateDriver" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                             </children>
-                        </GridPane>
-                        <GridPane layoutX="13.0" layoutY="269.0" prefHeight="85.0" prefWidth="252.0">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="99.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="129.0" minWidth="10.0" prefWidth="115.0" />
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            </rowConstraints>
-                           
                         </GridPane>
                         <GridPane layoutX="274.0" layoutY="170.0" prefHeight="118.0" prefWidth="264.0" vgap="5.0">
                             <columnConstraints>
@@ -84,6 +74,7 @@
                         <Button layoutX="22.0" layoutY="186.0" mnemonicParsing="false" onAction="#addBus" text="Add bus" />
                         <Button layoutX="93.0" layoutY="186.0" mnemonicParsing="false" onAction="#deleteBus" text="Delete bus" />
                         <Button fx:id="exitBus" layoutX="182.0" layoutY="186.0" mnemonicParsing="false" onAction="#exit" text="Exit" />
+                  <Button layoutX="20.0" layoutY="123.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" text="Potvrdi izmjene" onAction="#btnUpdateBus"/>
                     </children></AnchorPane>
             </content>
         </Tab>
